# nixos

./: configuration.nix  flake.nix  hardware-configuration.nix  home.nix
HM/: dunst.nix  fish.nix  kitty.nix  logseq.nix  stremio.nix  zsh.nix
HM/nvim/: default.nix  init.vim  nvim.nix
HM/polybar/: colors.ini  config.ini  default.nix  launch.sh  polybar.nix
HM/polybar/scripts/: spotify.sh  spotify_status.sh
HM/rofi/: default.nix  dracula.rasi  nord.rasi  rofi.nix
HM/xmonad/: default.nix  oled_brightness.sh
HM/xmonad/xmonad-sureyeaah/: Main.hs  default.nix  xmonad-sureyeaah.cabal
features/caches/: iohk.nix
features/fonts/: default.nix
features/logseq/: default.nix
hosts/: dell.nix  vbox.nix  xps13.nix
